# ShadowB

./: LICENSE  README.md
ShadowB/: README.md  __init__.py  captcha.py  console.py  core.py  emoji.py  fake.py  getD.py  image.py  mail.py  pyproject.toml  qrcode.py  safe.py  system.py  timer.py
ShadowB/Console/: error.py  info.py  success.py  warning.py
ShadowB/Core/: fileorg.py  randwords.py
ShadowB/GetD/: make_cookies.py  my_ip.py
ShadowB/Image/: check_image.py  export_metadata.py  extr_hidden_files.py  extr_hidden_text.py  remove_metadata.py
ShadowB/Mail/: make_mail.py  res_msj.py  send_msj.py
ShadowB/Qrcode/: generate.py
ShadowB/Safe/: clean.py  cleanText.py  safeFile.py
ShadowB/ShadowB/: passwords.py  safe.py  system.py
ShadowB/ShadowB/Core/: randwords.py
ShadowB/ShadowB/Image/: makeFile.py  makeText.py
ShadowB/ShadowB/Safe/: clean.py  cleanText.py  ext.py  filename.py
ShadowB/ShadowB/System/: my_data.py  scan.py
ShadowB/System/: make_cookies.py  my_data.py  my_ip.py
examples/: exp1.py  exp2.py  exp3-(captcha).py  exp3.py  exp4.py  exp5-(system).py  exp6-(safe).py  exp7-(fake-emoji-console).py
