[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ShadowB"
version = "0.9"
authors = [
    {name = "Adem mzoughi", email = "ademzoughi1312@gmail.com"},
]

dependencies = [
    "requests",
    "colorama",
    "better_profanity",
    "pillow",
    "pypdf",
    "qrcode",
    "stepic",
    "browser-cookie3"
]

description = "ShadowB is an all-in-one Python toolkit that bundles a wide range of everyday utilities — system info, image steganography, temporary email, QR codes, CAPTCHA generation, password tools, file safety checks, and more — into a single, easy-to-import package."
readme = "README.md"
requires-python = ">=3.8"